upgraded dependencies in build.gradle for Java 21, Gradle 8.6 and CloudSim Plus 6.2.12. All other packages upgraded to the latest stable version. Also, the gateway docker image now runs also using Java 21 instead of Java 17